k8s/base/networking/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ws-long-timeout
spec:
  forwardingTimeouts:
    responseHeaderTimeout: 0s
